added '.' input in the button grid

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>calculator</title>
+  <title>Calculator</title>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="stylesheet.css">
 </head>
@@ -27,7 +27,7 @@
     <button class='operand'>3</button>
     <button class='operator' id='add'>+</button>
     <button class='operand span-two'>0</button>
-    <button class='operand'>.</button>
+    <button id='dot'>.</button>
     <button class='operator' id='substract'>-</button>
   </div>
 </body>
