--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
       <div id='displayPreviousOperand'></div>
       <div id='displayCurrentOperand'></div>
     </div>
-    <button class='clear span-two'>CLEAR</button>
+    <button class='clear'>AC</button>
+    <button id='backspace'>&larr;</button>
     <button class='equals span-two'>=</button>
     <button class='operand'>7</button>
     <button class='operand'>8</button>
     <button class='operand'>9</button>
-    <button class='operator' id='divide'>/</button>
+    <button class='operator' id='add'>+</button>
     <button class='operand'>4</button>
     <button class='operand'>5</button>
     <button class='operand'>6</button>
-    <button class='operator' id='multiply'>*</button>
+    <button class='operator' id='substract'>-</button>
     <button class='operand'>1</button>
     <button class='operand'>2</button>
     <button class='operand'>3</button>
-    <button class='operator' id='add'>+</button>
+    <button class='operator' id='multiply'>*</button>
     <button class='operand span-two'>0</button>
     <button id='dot'>.</button>
-    <button class='operator' id='substract'>-</button>
+    <button class='operator' id='divide'>/</button>
   </div>
 </body>
 </html>
