added keyboard support, fixed multiple bugs

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div id='displayPreviousOperand'></div>
       <div id='displayCurrentOperand'></div>
     </div>
-    <button class='clear'>AC</button>
+    <button id='clear'>AC</button>
     <button id='backspace'>&larr;</button>
-    <button class='equals span-two'>=</button>
+    <button class='span-two' id='equal'>=</button>
     <button class='operand'>7</button>
     <button class='operand'>8</button>
     <button class='operand'>9</button>
